--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
 script: 
   - python manage.py makemigrations
   - python manage.py migrate
-  - coverage run manage.py test --pattern="test_*.py"
+  - coverage run --source=./ manage.py test --pattern="test_*.py"
 
 after_success:
   - coveralls
