--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '2'
 
 services:
+  db:
+    image: postgres:9.5
+    hostname: db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
+
   web:
     build:
       context: .
@@ -15,3 +23,7 @@ services:
       - .:/app
     ports:
       - "8000:8000"
+    links:
+      - db
+    depends_on:
+      - db
