--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,11 @@ install:
   - pip install django --quiet
   - pip install djangorestframework --quiet
   - pip install coveralls --quiet
+  - pip install psycopg2 --quiet
 
 script: 
   - python manage.py makemigrations
-  - python manage.py migrate
+  - python manage.py migrate --database=test
   - coverage run --source=./ manage.py test --pattern="test_*.py"
 
 after_success:
