--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - pip install djangorestframework --quiet
   - pip install coveralls --quiet
   - pip install psycopg2 --quiet
+  - pip install celery --quiet
 
 script: 
   - python manage.py makemigrations
