--- a/ojfront/package.json
+++ b/ojfront/package.json
@@ -10,7 +10,11 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "element-ui": "^2.4.5",
+    "vue": "^2.5.11",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
