--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - pip install coveralls --quiet
   - pip install psycopg2 --quiet
   - pip install celery --quiet
+  - pip install django-cors-headers --quiet
 
 script: 
   - python manage.py makemigrations
