--- a/ojfront/package.json
+++ b/ojfront/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.5",
+    "js-cookie": "^2.2.0",
     "vue": "^2.5.11",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
