--- a/ojfront/package.json
+++ b/ojfront/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "element-ui": "^2.4.5",
+    "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
     "vue": "^2.5.11",
+    "vue-highlightjs": "^1.3.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
