--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -22,7 +22,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install "django<2" --quiet
         pip install djangorestframework --quiet
-        pip install coveralls --quiet
         pip install psycopg2-binary --quiet
         pip install celery --quiet
         pip install django-cors-headers --quiet
@@ -32,5 +31,4 @@ jobs:
         export DJANGO_SETTINGS_MODULE=oj.settings.unittest
         python manage.py makemigrations
         python manage.py migrate
-        coverage run --source=./ manage.py test --pattern="test_*.py"
-        coveralls
+        python manage.py test --pattern="test_*.py"
